--- a/content/about/state.adoc
+++ b/content/about/state.adoc
@@ -54,7 +54,7 @@ Dealing with concurrency means giving up the illusion of omnipotence. A program 
 
 On the other hand, changing state to a new value requires access to the 'current' value and the identity. Clojure's Refs and Agents handle this automatically. In the case of Refs, any interaction you do must occur within a transaction (else Clojure will throw an exception), all such interaction will see a consistent view of the world as of a point in time, and no changes will proceed unless the states to be changed haven't been changed by other participants in the meantime. Transactions support synchronous change to multiple Refs. Agents, OTOH, offer asynchronous change to a single reference. You pass a function and values, and, at some point in the future, that function will be passed the current state of the Agent and the return value of the function will become the Agent's new state.
 
-In all cases the program will see stable views of the values in the world, as those values can't change, and sharing them among cores is fine. The trick is, "values never change" means that making new values from old ones must be efficient, and it is in Clojure, due to its persistent data structures. They allow you to finally follow the oft-proffered advice to favor immutability. So you set the state of an identity to a new state by reading its current value, calling a pure function on that value to create a new value, and setting that value as the new state. These composite operations are made easy and atomic by the https://clojure.github.com/clojure/clojure.core-api.html#clojure.core/alter[alter], https://clojure.github.com/clojure/clojure.core-api.html#clojure.core/commute[commute] and https://clojure.github.com/clojure/clojure.core-api.html#clojure.core/send[send] functions.
+In all cases the program will see stable views of the values in the world, as those values can't change, and sharing them among cores is fine. The trick is, "values never change" means that making new values from old ones must be efficient, and it is in Clojure, due to its persistent data structures. They allow you to finally follow the oft-proffered advice to favor immutability. So you set the state of an identity to a new state by reading its current value, calling a pure function on that value to create a new value, and setting that value as the new state. These composite operations are made easy and atomic by the https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/alter[alter], https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/commute[commute] and https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/send[send] functions.
 
 [[actors]]
 == Message Passing and Actors
@@ -77,4 +77,4 @@ Clojure is a functional language that explicitly supports programs as models and
 
 In coming to Clojure from an OO language, you can use one of its <<xref/../../reference/data_structures#,persistent collections>>, e.g. maps, instead of objects. Use values as much as possible. And for those cases where your objects are truly modeling identities (far fewer cases than you might realize until you start thinking about it this way), you can use a Ref or Agent with e.g. a map as its state in order to model an identity with changing state. If you want to encapsulate or abstract away the details of your values, a good idea if they are non-trivial, write a set of functions for viewing and manipulating them. If you want polymorphism, use Clojure's multimethods.
 
-In the local case, since Clojure does not have mutable local variables, instead of building up values in a mutating loop, you can instead do it functionally with <<xref/../../reference/special_forms#recur,recur>> or https://clojure.github.com/clojure/clojure.core-api.html#clojure.core/reduce[reduce].
+In the local case, since Clojure does not have mutable local variables, instead of building up values in a mutating loop, you can instead do it functionally with <<xref/../../reference/special_forms#recur,recur>> or https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/reduce[reduce].
