--- a/content/community/user_groups.adoc
+++ b/content/community/user_groups.adoc
@@ -65,7 +65,7 @@ See mailing list thread for more info])
 *** https://www.meetup.com/Clojure-Co-Lab/[Clojure Co-Lab] - Columbia, South
 Carolina
 ** West
-*** http://seajure.github.com[Seajure - Seattle Clojure Group]
+*** http://seajure.github.io[Seajure - Seattle Clojure Group]
 *** https://www.meetup.com/clojerks/[Clojure user group in Portland]
 *** https://www.meetup.com/The-Bay-Area-Clojure-User-Group/[Bay Area Clojure User
 Group] - San Francisco (monthly meetup plus monthly
