--- a/content/reference/java_interop.adoc
+++ b/content/reference/java_interop.adoc
@@ -108,7 +108,7 @@ expands to:
 
 `(. (. System (getProperties)) (get "os.name"))`
 
-but is easier to write, read, and understand. See also the https://clojure.github.com/clojure/clojure.core-api.html#clojure.core/%2d%3e[pass:[->]] macro which can be used similarly:
+but is easier to write, read, and understand. See also the https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%2d%3e[pass:[->]] macro which can be used similarly:
 
 `(pass:[->] (System/getProperties) (.get "os.name"))`
 
