--- a/content/releases/downloads_older.adoc
+++ b/content/releases/downloads_older.adoc
@@ -9,6 +9,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 == Older Clojure Releases
 
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.2/[Clojure 1.10.3] (Mar, 2021)
 * https://repo1.maven.org/maven2/org/clojure/clojure/1.10.2/[Clojure 1.10.2] (Jan, 2021)
 * https://repo1.maven.org/maven2/org/clojure/clojure/1.10.1/[Clojure 1.10.1] (June, 2019)
 * https://repo1.maven.org/maven2/org/clojure/clojure/1.10.0/[Clojure 1.10.0] (December, 2018)
