update patch list

--- a/content/dev/contributor_agreement.adoc
+++ b/content/dev/contributor_agreement.adoc
@@ -139,6 +139,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Michael Fogus
 * Michał Marczyk
 * Michel Alexandre Salim
+* Michiel Borkent
 * Mike Anderson
 * Mike Hinchey
 * Nahuel Greco
@@ -146,12 +147,14 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Nicolas Buduroi
 * Nikita Prokopov
 * Nola Stowe
+* Oliver Caldwell
 * Paul M Bauer
 * Paul Stadig
 * Pepijn de Vos
 * Phil Hagelberg
 * Philip Aston
 * Philip Potter
+* Piotr Zygielo
 * Ragnar Dahlén
 * Ralf Schmitt
 * Rasmus Svensson
