--- a/content/news/2021/03/15/state-of-clojure-2021.adoc
+++ b/content/news/2021/03/15/state-of-clojure-2021.adoc
@@ -47,7 +47,7 @@ Most survey respondents reported that they came to Clojure from the Java program
 
 image::/images/content/news/2021-03-15/features.png[Functional Programming and Lispiness are great force-multipliers,align="center"]
 
-First, the __functional style of programming__ fostered by Clojure is valued highly by Clojure programmers for facilitating a separation of data and process. Coupled with its suite of immutable data structures, Clojure applications are often built as pipelines of data transformation functions that can be composed to implement higher-level business concepts in software. As a __dialect of Lisp__, Clojure provides an interactive programming environment called the REPL (Read, Eval, Print, Loop). The REPL fosters exploratory programming, allowing Clojure programmers to interactively develop solutions to sticky programming problems in real-time. Indeed, the confluence of the REPL, immutable data structures, and functional programming allows for a development process light on ceremony, allowing programmers to focus on the problem at hand rather than the complexities foisted on them by their programming language.
+First, the *functional style of programming* fostered by Clojure is valued highly by Clojure programmers for facilitating a separation of data and process. Coupled with its suite of immutable data structures, Clojure applications are often built as pipelines of data transformation functions that can be composed to implement higher-level business concepts in software. As a *dialect of Lisp*, Clojure provides an interactive programming environment called the REPL (Read, Eval, Print, Loop). The REPL fosters exploratory programming, allowing Clojure programmers to interactively develop solutions to sticky programming problems in real-time. Indeed, the confluence of the REPL, immutable data structures, and functional programming allows for a development process light on ceremony, allowing programmers to focus on the problem at hand rather than the complexities foisted on them by their programming language.
 
 == The Clojure Ecosystem
 
