--- a/content/reference/special_forms.adoc
+++ b/content/reference/special_forms.adoc
@@ -344,18 +344,18 @@ Clojure 1.9 adds support for directly destructuring many keys (or symbols) that 
 [[keyword-arguments]]
 === Keyword Arguments
 
-Keyword arguments are optional trailing variadic arguments of the form `akey aval bkey bval...` that can be accessed in the function body via associative destructuring. If the trailing variadic arguments contains an odd number of elements then then last is added to the resulting map value via `conj`. To define a function that accepts keyword arguments you supply a map destructuring form in the __rest-param__ declaration position. For example, a function that takes a sequence and optional keyword arguments and returns a vector containing the values is defined as:
+Keyword arguments are optional trailing variadic arguments of the form `akey aval bkey bval...` that can be accessed in the function body via associative destructuring. Also and optionally, if the trailing variadic arguments contain an odd number of elements then then last is added to the map built from the preceeding key->values via `conj`. If the variadic arguments contain only a single map then that map is used outright for destructuring, allowing functions accepting keyword arguments to accept a map and/or key->value pairs. To define a function that accepts keyword arguments you supply a map destructuring form in the __rest-param__ declaration position. For example, a function that takes a sequence and optional keyword arguments and returns a vector containing the values is defined as:
 
 [source,clojure]
 ----
-(defn destr [a & {:keys [b c] :as opts}]
-  [a b c opts])
+(defn destr [& {:keys [a b] :as opts}]
+  [a b opts])
 
-(destr 1 :c 3)
-->[1 nil 3 {:c 3}]
+(destr :a 1)
+->[1 nil {:a 1}]
 
-(destr 1 :b 2 {:c 3})
-->[1 2 3 {:b 2 :c 3}]
+(destr {:a 1 :b 2})
+->[1 2 {:a 1 :b 2}]
 ----
 
 The map __binding-form__ to the right of the `&` in `destr` is an associative destructuring __binding-form__ <<special_forms#associative-destructuring,detailed above>>.
