--- a/content/reference/special_forms.adoc
+++ b/content/reference/special_forms.adoc
@@ -344,7 +344,7 @@ Clojure 1.9 adds support for directly destructuring many keys (or symbols) that 
 [[keyword-arguments]]
 === Keyword Arguments
 
-Keyword arguments are optional trailing variadic arguments of the form `akey aval bkey bval...` that can be accessed in the function body via associative destructuring. Also and optionally, if the trailing variadic arguments contain an odd number of elements then then last is added to the map built from the preceeding key->values via `conj`. If the variadic arguments contain only a single map then that map is used outright for destructuring, allowing functions accepting keyword arguments to accept a map and/or key->value pairs. To define a function that accepts keyword arguments you supply a map destructuring form in the __rest-param__ declaration position. For example, a function that takes a sequence and optional keyword arguments and returns a vector containing the values is defined as:
+Keyword arguments are optional trailing variadic arguments of the form `akey aval bkey bval...` that can be accessed in the function body via associative destructuring. Also, a function specified to take kwargs may be passed a single map instead of or in addition to (and following) the key/value pairs. When a lone map is passed, it is used outright for destructuring, else a trailing map is added to the map built from the preceding key/values via `conj`. To define a function that accepts keyword arguments you supply a map destructuring form in the __rest-param__ declaration position. For example, a function that takes a sequence and optional keyword arguments and returns a vector containing the values is defined as:
 
 [source,clojure]
 ----
