Added patch + screening crieria about ensuring that commit messages include the context for the changes

--- a/content/dev/developing_patches.adoc
+++ b/content/dev/developing_patches.adoc
@@ -61,7 +61,7 @@ test:
 [INFO] ------------------------------------------------------------------------
 ----
 
-Once you've finished making your changes you need to commit them. Please use a commit message that begins with the JIRA number (CLJ-xyz)!
+Once you've finished making your changes you need to commit them. Please use a commit message that begins with the JIRA number (CLJ-xyz) and includes a statement about the problem or enhancement the changes are in service to!
 
 [source,shell]
 ----
